# sentry

./: .gitignore  ARCHITECTURE_QUICKREF.md  README.md  sign
.cursor/rules/: detection-development.mdc  modify-after-structure.mdc
.cursor/skills/sentry-project-structure/: SKILL.md
app/: build.gradle  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib-env.cpp  native-lib.cpp
app/src/main/cpp/detector/: anti_debug.cpp  art_method_detector.cpp  art_method_detector.h  class_linker_scan.cpp  class_linker_scan.h  env_detector.cpp  env_detector.h  hook_detector.cpp  memory_scanner.cpp  memory_scanner.h  port_scanner.cpp  port_scanner.h  signature_checker.cpp  signature_checker.h  so_integrity.cpp  so_integrity.h  thread_detector.cpp  thread_detector.h  trap_detector.cpp  trap_detector.h
app/src/main/cpp/utils/: syscall_utils.cpp  syscall_utils.h
app/src/main/java/anti/rusda/: DebugFragment.java  EnvironmentFragment.java  MainActivity.java  OverviewFragment.java  SentryApp.java
app/src/main/java/anti/rusda/detector/: DebugDetectionManager.java  DetectionManager.java  DetectionResult.java  EnvDetectionManager.java  KeyAttestationHelper.java  PlayIntegrityHelper.java
app/src/main/java/anti/rusda/ui/: MainPagerAdapter.java
app/src/main/java/anti/rusda/ui/adapter/: DetectionAdapter.java
app/src/main/res/layout/: activity_main.xml  fragment_debug.xml  fragment_environment.xml  fragment_overview.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
doc/: DETECTION_SPEC.md
frida-script/: bypass.js
gradle/: libs.versions.toml
